Fix EXPORT() rules.
protobuf was not providing any mechanism to export targets for build directory
from external projects. Fixed that. Projects like ParaView can now set
PROTOBUF_EXPORTS_FILE variable to specify a custom targets file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,10 @@ set(PROTOBUF_INCLUDE_DIRS
   "${PROTOBUF_SOURCE_DIR}/src"
   "${PROTOBUF_BINARY_DIR}/src")
 set_directory_properties(PROPERTIES INCLUDE_DIRECTORIES "${protobuf_INCLUDE_DIRS}")
-set(PROTOBUF_EXPORTS_FILE "${PROTOBUF_BINARY_DIR}/PROTOBUF_EXPORTS.cmake")
-file(REMOVE "${PROTOBUF_EXPORTS_FILE}")
+if (NOT DEFINED PROTOBUF_EXPORTS_FILE)
+  set(PROTOBUF_EXPORTS_FILE "${PROTOBUF_BINARY_DIR}/PROTOBUF_EXPORTS.cmake")
+  file(REMOVE "${PROTOBUF_EXPORTS_FILE}")
+endif()
 
 option(protobuf_ENABLE_TESTING "Enable and build protobuf tests" OFF)
 
