--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -336,7 +336,7 @@ ELSE(NOT CMAKE_CROSSCOMPILING)
          APPEND FILE "${PROTOBUF_EXPORTS_FILE}")
 ENDIF(NOT CMAKE_CROSSCOMPILING)
 
-install (TARGETS protobuf protobuf-lite protoc_lib
+install (TARGETS protobuf protobuf-lite protoc_lib protoc_compiler
   EXPORT ${PROTOBUF_INSTALL_EXPORT_NAME}
   RUNTIME DESTINATION ${PROTOBUF_INSTALL_BIN_DIR} COMPONENT Runtime
   LIBRARY DESTINATION ${PROTOBUF_INSTALL_LIB_DIR} COMPONENT Runtime
