--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -342,6 +342,8 @@ install (TARGETS protobuf protobuf-lite protoc_lib protoc_compiler
   LIBRARY DESTINATION ${PROTOBUF_INSTALL_LIB_DIR} COMPONENT Runtime
   ARCHIVE DESTINATION ${PROTOBUF_INSTALL_LIB_DIR} COMPONENT Development)
 
+install (DIRECTORY google DESTINATION ${PROTOBUF_INSTALL_INCLUDE_DIR} FILES_MATCHING PATTERN "*.h")
+
 IF(COMPILE_TOOLS_TARGET)
   ADD_DEPENDENCIES(${COMPILE_TOOLS_TARGET} protoc_compiler)
 ENDIF(COMPILE_TOOLS_TARGET)
